<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>

    <string name="displayHint">Enter the equation</string>

    <string name="btnOneText" translatable="false">1</string>
    <string name="btnTwoText" translatable="false">2</string>
    <string name="btnThreeText" translatable="false">3</string>
    <string name="btnFourText" translatable="false">4</string>
    <string name="btnFiveText" translatable="false">5</string>
    <string name="btnSixText" translatable="false">6</string>
    <string name="btnSevenText" translatable="false">7</string>
    <string name="btnEightText" translatable="false">8</string>
    <string name="btnNineText" translatable="false">9</string>
    <string name="btnZeroText" translatable="false">0</string>

    <string name="btnClearText" translatable="false">C</string>
    <string name="btnParenthesesOpenText" translatable="false">(</string>
    <string name="btnParenthesesCloseText" translatable="false">)</string>
    <string name="btnDivideText" translatable="false">÷</string>
    <string name="btnMultiplyText" translatable="false">×</string>
    <string name="btnAddText" translatable="false">+</string>
    <string name="btnSubtractText" translatable="false">-</string>
    <string name="btnDecimalText" translatable="false">.</string>
    <string name="btnEqualsText" translatable="false">=</string>

    <string name="btnBackspace" translatable="false"> </string>

    <string name="btnSinText" translatable="false">sin</string>
    <string name="btnCosText" translatable="false">cos</string>
    <string name="btnTanText" translatable="false">tan</string>
    <string name="btnArcSinText" translatable="false">sin<sup><small>-1</small></sup></string>
    <string name="btnArcCosText" translatable="false">cos<sup><small>-1</small></sup></string>
    <string name="btnArcTanText" translatable="false">tan<sup><small>-1</small></sup></string>
    <string name="btnLnText" translatable="false">ln</string>
    <string name="btnLogText" translatable="false">log</string>
    <string name="btnSqrtText" translatable="false">√</string>
    <string name="btnAbsoluteValueText" translatable="false">|x|</string>
    <string name="btnPiText" translatable="false">π</string>
    <string name="btnEText" translatable="false">e</string>
    <string name="btnFactorialText" translatable="false">x!</string>
    <string name="btnSquareText" translatable="false">x<sup><small>2</small></sup></string>
    <string name="btnPowerText" translatable="false">x<sup><small>y</small></sup></string>

    <string name="btnUnitConverterText">Unit Converter</string>
    <string name="btnCurrencyText">Currency</string>
    <string name="btnLengthText">Length</string>
    <string name="btnAreaText">Area</string>
    <string name="btnVolumeText">Volume</string>
    <string name="btnTemperatureText">Temperature</string>
    <string name="btnWeightText">Weight</string>
    <string name="currencyConverterText">Currency converter</string>
    <string name="btnConvert">Convert</string>
    <string name="amountToConvert">Amount to convert</string>
    <string name="convertToText">Convert To:</string>
    <string name="convertFromText">Convert From:</string>

    <string name="areaConverter">Area Converter</string>
    <string name="volumeConverter">Volume Converter</string>
    <string name="lengthConverter">Length Converter</string>
    <string name="weightConverter">Weight Converter</string>
    <string name="temperatureConverter">Temperature Converter</string>
</resources>