<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previousCalculationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dsfsdfsdfsdfsdf"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/displayEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/displyHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/border"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnClearClick"
            android:text="@string/btnClearText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

        <Button
            android:id="@+id/btnParenthesesOpen"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnParenthesesOpenClick"
            android:text="@string/btnParenthesesOpenText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnClear"
            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

        <Button
            android:id="@+id/btnParenthesesClose"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnParenthesesCloseClick"
            android:text="@string/btnParenthesesCloseText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnParenthesesOpen"
            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnDivideClick"
            android:text="@string/btnDivideText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnParenthesesClose"
            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnSevenClick"
            android:text="@string/btnSevenText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClear" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnEightClick"
            android:text="@string/btnEightText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnSeven"
            app:layout_constraintTop_toBottomOf="@+id/btnParenthesesOpen" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnNineClick"
            android:text="@string/btnNineText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnEight"
            app:layout_constraintTop_toBottomOf="@+id/btnParenthesesClose" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnMultiplyClick"
            android:text="@string/btnMultiplyText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnNine"
            app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnFourClick"
            android:text="@string/btnFourText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnFiveClick"
            android:text="@string/btnFiveText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnFour"
            app:layout_constraintTop_toBottomOf="@+id/btnEight" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnSixClick"
            android:text="@string/btnSixText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnFive"
            app:layout_constraintTop_toBottomOf="@+id/btnNine" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnSubtractClick"
            android:text="@string/btnSubtractText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnSix"
            app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

        <Button
            android:id="@+id/btnOne"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnOneClick"
            android:text="@string/btnOneText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFour" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnTwoClick"
            android:text="@string/btnTwoText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnOne"
            app:layout_constraintTop_toBottomOf="@+id/btnFive" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnThreeClick"
            android:text="@string/btnThreeText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnTwo"
            app:layout_constraintTop_toBottomOf="@+id/btnSix" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnAddClick"
            android:text="@string/btnAddText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnThree"
            app:layout_constraintTop_toBottomOf="@+id/btnSubtract" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnZeroClick"
            android:text="@string/btnZeroText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/btnTwo"
            app:layout_constraintStart_toStartOf="@+id/btnOne"
            app:layout_constraintTop_toBottomOf="@+id/btnOne" />

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnDecimalClick"
            android:text="@string/btnDecimalText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnZero"
            app:layout_constraintTop_toBottomOf="@+id/btnThree" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="btnEqualClick"
            android:text="@string/btnEqualsText"
            android:textColor="@color/border"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnDecimal"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

        <ImageButton
            android:id="@+id/btnBackspace"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/btnBackspace"
            android:onClick="btnBackspaceClick"
            android:textColor="@color/border"
            app:layout_constraintEnd_toEndOf="@+id/btnDivide"
            app:layout_constraintStart_toStartOf="@+id/btnDivide"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_backspace" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>