<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    tools:context=".CurrencyConverterActivity">

    <TextView
        android:id="@+id/currencyConverterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currencyConverterText"
        android:textSize="40sp"
        android:textColor="@color/border"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        />

    <EditText
        android:id="@+id/amountToConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:inputType="number"
        android:hint="@string/amountToConvert"
        android:gravity="end"
        android:textColor="@color/border"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/convertFromTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convertFromText"
            android:textSize="20sp"
            android:textColor="@color/border"
            android:layout_gravity="center"
            />

        <Spinner
            android:id="@+id/convertFrom"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/convertToTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convertToText"
            android:textSize="20sp"
            android:textColor="@color/border"
            android:layout_gravity="center"
            />

        <Spinner
            android:id="@+id/convertTo"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="35dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/currencyConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/btnConvert"
        android:background="@drawable/button_background"
        android:onClick="btnConvertClick"
        />

    <TextView
        android:id="@+id/convertResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/border"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        />

</LinearLayout>